Deleted all animation and change font-family

--- a/index.html
+++ b/index.html
@@ -2,30 +2,95 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Maksik9x</title>
 </head>
 <body>
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-xs-1 col-md-2 leftblock">
+		<div class="col-xs-2 col-md-2 leftblock">
 			<div class="logo">
 			<h1 class="name"><span>Do</span> Ngok Kuen</h1>
 			<h2>PHP Developer</h2>
 		</div>
 		<nav>
 		<ul class="menu">
-			<a href=""><li><img src="icons/Superman-24.png"><span>Skills</span></li></a>
-			<a href=""><li><img src="icons/Iceberg-24.png"><span>Experiance</span></li></a>
-			<a href=""><li><img src="icons/Book_Shelf-24.png"><span>Projects</span></li></a>
-			<a href=""><li><img src="icons/Einstein-24.png"><span>Education</span></li></a>
-			<a href=""><li><img src="icons/Office_Phone-24.png"><span>Contact</span></li></a>
+			<a href=""><li><img class="icon" src="icons/Superman-24.png"><span class="small">Skills</span></li></a>
+			<a href=""><li><img class="icon" src="icons/Iceberg-24.png"><span class="big">Experiance</span></li></a>
+			<a href=""><li><img class="icon" src="icons/Book_Shelf-24.png"><span class="small">Projects</span></li></a>
+			<a href=""><li><img class="icon" src="icons/Einstein-24.png"><span class="medium">Education</span></li></a>
+			<a href=""><li><img class="icon" src="icons/Office_Phone-24.png"><span class="small">Contact</span></li></a>
 		</ul>
 		</nav>
 			</div>
-		<div class="col-xs-11 col-md-10 rightblock"><h1>g</h1></div>
+		<div class="col-xs-10 col-md-10 rightblock">
+			<section>
+				<div id="skills" class="head">
+					<h1>Skills</h1>
+				</div>
+				<section class="skill">
+					<hr>
+					<h1 class="sectionHeader">Language</h1>
+					<article>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/php-icon.jpg">
+							</div>
+							<span class="skill-card-footer">PhP</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/js-icon.png">
+							</div>
+							<span class="skill-card-footer">JavaScript</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/css-icon.png">
+							</div>
+							<span class="skill-card-footer">CSS</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/html-icon.png">
+							</div>
+							<span class="skill-card-footer">HTML</span>
+						</div>
+					</article>
+					<hr>
+					<h1 class="sectionHeader">Framework</h1>
+					<article>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/laravel-icon.jpg">
+							</div>
+							<span class="skill-card-footer">Laravel</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/zend-icon.gif">
+							</div>
+							<span class="skill-card-footer">Zend</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/zend2-icon.png">
+							</div>
+							<span class="skill-card-footer">Zend 2</span>
+						</div>
+						<div class="skill-card">
+							<div class="skill-card-image">
+								<img src="icons/yii-2-icon.jpg">
+							</div>
+							<span class="skill-card-footer">Yii 2</span>
+						</div>
+					</article>
+				</section>
+			</section>
+
+		</div>
 	</div>
 </div>
 </body>
