--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script type="text/javascript" src="js/scroll.js"></script>
 	<title>Maksik9x</title>
 </head>
 <body>
@@ -17,15 +19,15 @@
 		</div>
 		<nav>
 		<ul class="menu">
-			<a href=""><li><img class="icon" src="icons/Superman-24.png"><span class="small">Skills</span></li></a>
-			<a href=""><li><img class="icon" src="icons/Iceberg-24.png"><span class="big">Experiance</span></li></a>
-			<a href=""><li><img class="icon" src="icons/Book_Shelf-24.png"><span class="small">Projects</span></li></a>
-			<a href=""><li><img class="icon" src="icons/Einstein-24.png"><span class="medium">Education</span></li></a>
-			<a href=""><li><img class="icon" src="icons/Office_Phone-24.png"><span class="small">Contact</span></li></a>
+			<li><a href="#skills"><img class="icon" src="icons/Superman-24.png"><span class="small">Skills</span></a></li>
+			<li><a href="#experiancies"><img class="icon" src="icons/Iceberg-24.png"><span class="big">Experiance</span></a></li>
+			<li><a href="#projects"><img class="icon" src="icons/Book_Shelf-24.png"><span class="small">Projects</span></a></li>
+			<li><a href="#education"><img class="icon" src="icons/Einstein-24.png"><span class="medium">Education</span></a></li>
+			<li><a href="#contact"><img class="icon" src="icons/Office_Phone-24.png"><span class="small">Contact</span></a></li>
 		</ul>
 		</nav>
 			</div>
-		<div class="col-xs-10 col-md-10 rightblock">
+		<div class="col-xs-10  col-md-10 rightblock">
 			<section>
 				<div id="skills" class="head">
 					<h1>Skills</h1>
@@ -128,10 +130,10 @@
 				</section>
 				<section>
 					<div id="experiancies" class="head">
-						<h1>Expariance</h1>
+						<h1>Experiance</h1>
 					</div>
 					<section class="wrapper">
-						<div class="expariance-card">
+						<div class="experiance-card">
 							<a href="http://www.nixsolutions.com/"><h2>Nix-Solutions</h2></a>
 							<span class="period-work">2015-Today</span>
 							<div class="position">
@@ -155,6 +157,109 @@
 							<span>Active in building and maintaining the team spirit;</span>
 							</div>
 						</div>
+					</section>
+				</section>
+				<section>
+					<div id="projects" class="head">
+						<h1>Projects</h1>
+					</div>
+					<section class="wrapper">
+						<div class="experiance-card">
+							<a href="http://www.nixsolutions.com/"><h2>Nix-Solutions</h2></a>
+							<span class="period-work">2015-Today</span>
+							<div class="position">
+							<span"><img src="icons/White-14.png"></span>
+							<span>Junior PHP Developer</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Work through all aspects of software development lifecycle to create robust, rock-solid web applications</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Interact with Technical and Creative teams to understand scope of projects</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Communicate in clear and structured way with clients, colleagues and managers</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Active in building and maintaining the team spirit;</span>
+							</div>
+						</div>
+					</section>
+				</section>
+				<section>
+					<div id="education" class="head">
+						<h1>Education</h1>
+					</div>
+					<section class="wrapper">
+						<div class="experiance-card">
+							<a href="http://kupiansk-school12.edu.kh.ua/"><h2>Kupyansk School No. 12</h2></a>
+							<span class="period-work">2007-2012</span>
+							<div class="position">
+							<span"><img src="icons/Souvenirs-16.png"></span>
+							<span>Kupyansk , Kharkov region, Ukraine</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/First-16.png"></span>
+							<span>Diploma with honours</span>
+						</div>
+						</div>
+						<div class="experiance-card">
+							<a href="http://www.hneu.edu.ua/"><h2>Simon Kuznets Kharkiv National University of Economics</h2></a>
+							<span class="period-work">2012-Today</span>
+							<div class="position">
+							<span"><img src="icons/Souvenirs-16.png"></span>
+							<span>Kharkov, Ukraine</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Algorithms and data structures</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span>Computer networks</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/Lamp-14.png"></span>
+							<span> Studied PHP Engineering, Product Development, Application Deployment, and Market Validation</span>
+							</div>
+							<div class="responsability">
+							<span><img src="icons/First-16.png"></span>
+							<span>Studied for Bachelor in Computer Sience</span>
+							</div>
+						</div>
+					</section>
+				</section>
+				<section>
+					<div id="contact" class="head">
+						<h1>Contact</h1>
+					</div>
+					<section class="wrapper">
+					<div class="links">
+						<a href="https://www.facebook.com/mitto.kendy"><img src="icons/Facebook-48.png"></a>
+						<a href="https://vk.com/mrmaks94"><img src="icons/Vk.com.png"></a>
+						<a href="https://github.com/DevilMayCry94"><img src="icons/GitHub-48.png"></a>
+						<a href="https://www.linkedin.com/"><img src="icons/LinkedIn-48.png"></a>
+					</div>
+					<h1 class="message">Send Message</h1>
+					<form method="post" action="js/google-ap-script.js">
+					<div class="row">
+						<div class="col-md-6 col-xs-12">
+						<input type="text" name="name" placeholder="Name">
+						<input type="email" name="email" placeholder="Email">
+						<input type="text" name="subject" placeholder="Subject">
+						</div>
+						<div class="col-md-6 col-xs-12">
+							<textarea id="inputMessage" name="message" placeholder="Message"></textarea>
+						</div>
+					</div>
+						<div class="button">
+							<input type="submit" name="submit" value="Send">
+						</div>
+					</form>
 					</section>
 				</section>
 			</section>
