--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script   src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="  
+ crossorigin="anonymous"></script>
+ <script src="js/main.js"></script>
+ <script src="js/typed.min.js"></script>
 <script type="text/javascript" src="js/scroll.js"></script>
 	<title>Maksik9x</title>
 </head>
 <body>
+<div id="firstWindow">
+		<div id="mainName">
+			<h1>
+				Do <span>Ngok Kuen</span>
+			</h1>
+			<h2></h2>
+		</div>
+	</div>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-xs-2 col-md-2 leftblock">
